--- a/code.html
+++ b/code.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  
+  <title>Frontend Mentor | Results summary component</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
 <body>
-    <section>
-        <div>
-            Your Result
-        </div>
-        <div>
-            <span>76</span> Of 100
-        </div>
-        <div>
-            <p>Great</p>
-            <p>You scored higher than 65% of the people who  have taken these tests.</p>
-        </div>
-    </section>
-    <section>
-        <div>Summary</div>
-        <div>
-            <div>
-                <img src="./assets/images/icon-reaction.svg" alt="">
-                <p>Reaction</p>
-                <p><span>80</span>/100</p>
-            </div>
-            <div>
-                <img src="./assets/images/icon-memory.svg" alt="">
-                <p>Memory</p>
-                <p><span>92</span>/100</p>
-            </div>
-            <div>
-                <img src="./assets/images/icon-verbal.svg" alt="">
-                <p>Verbal</p>
-                <p><span>61</span>/100</p>
-            </div>
-            <div>
-                <img src="./assets/images/icon-visual.svg" alt="">
-                <p>Visual</p>
-                <p><span>72</span>/100</p>
-            </div>
-        </div>
-        <button>Continue</button>
-    </section>
+
+  Your Result
+  76
+  of 100
+
+  Great
+  You scored higher than 65% of the people who have taken these tests.
+  
+  Summary
+
+  Reaction
+  80 / 100
+
+  Memory
+  92 / 100
+
+  Verbal
+  61 / 100
+
+  Visual
+  72 / 100
+
+  Continue
+  
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </div>
 </body>
 </html>
