first touch...tbc

--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
             <p>You scored higher than 65% of the people who  have taken these tests.</p>
         </div>
     </section>
-    <section>
-        <div>Summary</div>
-        <div>
-            <div>
-                <img src="./assets/images/icon-reaction.svg" alt="">
-                <p>Reaction</p>
-                <p><span>80</span>/100</p>
+    <section class="right__section">
+        <div class="right__heading">Summary</div>
+        <div class="result__pane">
+            <div class="result__line">
+                <img class="result__pic" src="./assets/images/icon-reaction.svg" alt="">
+                <p class="result__para">Reaction</p>
+                <p class="result__score"><span class="result__score--highlight">80</span>/100</p>
             </div>
-            <div>
-                <img src="./assets/images/icon-memory.svg" alt="">
-                <p>Memory</p>
-                <p><span>92</span>/100</p>
+            <div class="result__line">
+                <img class="result__pic" src="./assets/images/icon-memory.svg" alt="">
+                <p class="result__para">Memory</p>
+                <p class="result__score"><span class="result__score--highlight">92</span>/100</p>
             </div>
-            <div>
-                <img src="./assets/images/icon-verbal.svg" alt="">
-                <p>Verbal</p>
-                <p><span>61</span>/100</p>
+            <div class="result__line">
+                <img class="result__pic" src="./assets/images/icon-verbal.svg" alt="">
+                <p class="result__para">Verbal</p>
+                <p class="result__score"><span class="result__score--highlight">61</span>/100</p>
             </div>
-            <div>
-                <img src="./assets/images/icon-visual.svg" alt="">
-                <p>Visual</p>
-                <p><span>72</span>/100</p>
+            <div class="result__line">
+                <img class="result__pic" src="./assets/images/icon-visual.svg" alt="">
+                <p class="result__para">Visual</p>
+                <p class="result__score--highlight"><span class="result__score--highlight">72</span>/100</p>
             </div>
-        </div>
-        <button>Continue</button>
+        </div> 
+        <button class="result__pane--btn">Continue</button>
     </section>
 </body>
 </html>
